deployment/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kiii-real-time-chat
  labels:
    name: kiii-real-time-chat
