deployment/api-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: real-time-chat-pod-api
  labels:
    app.kubernetes.io/name: real-time-chat-api-container
spec:
  containers:
    - name: real-time-chat-api-container
      image: stefanijaduracoska/kiii_project_api
      ports:
        - containerPort: 5000
