deployment/web-pod.yml
apiVersion: v1
kind: Pod
metadata:
  namespace: kiii-real-time-chat
  name: real-time-chat-pod-web
  labels:
    app.kubernetes.io/name: real-time-chat-web-container
spec:
  containers:
    - name: real-time-chat-web-container
      image: stefanijaduracoska/kiii_project_web:latest
      ports:
        - containerPort: 3000
