deployment/service-api.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  labels:
    app: api-service
spec:
  ports:
    - port: 5000
      name: api-service
    - port: 3300
      name: api-websocket-service
  type: NodePort
  selector:
    app.kubernetes.io/name: real-time-chat-api-container
