deployment/service-web.yml
apiVersion: v1
kind: Service
metadata:
  namespace: kiii-real-time-chat
  name: web-service
  labels:
    app: web-service
spec:
  ports:
    - port: 3000
      name: web-service
  type: NodePort
  selector:
    app.kubernetes.io/name: real-time-chat-web-container
