deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: kiii-real-time-chat
  name: real-time-chat-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api.real-time-chat.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: api-service
                port:
                  number: 5000
    - host: socket.real-time-chat.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: api-service
                port:
                  number: 3300
    - host: web.real-time-chat.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: web-service
                port:
                  number: 3000
